# learnX-for-HarmonyOS

./: .eslintrc.js  .gitignore  How-to-debug.md  LICENSE  README.md  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  polyfills.js  tsconfig.json
harmony/: .gitignore  build-profile.json5  oh-package.json5
harmony/AppScope/: app.json5
harmony/AppScope/resources/base/element/: string.json
harmony/entry/: .gitignore  build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
harmony/entry/src/main/: module.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp  autolinking.cmake
harmony/entry/src/main/ets/: RNPackagesFactory.ets
harmony/entry/src/main/ets/entryability/: EntryAbility.ets
harmony/entry/src/main/ets/pages/: Index.ets
harmony/entry/src/main/ets/workers/: RNOHWorker.ets
harmony/entry/src/main/resources/base/element/: string.json
harmony/hvigor/: hvigor-config.json5
scripts/: build_release.ps1  sync-harmony-aliases.js
src/: App.tsx
src/assets/translations/: en.ts  zh.ts
src/components/: AssignmentCard.tsx  AutoHeightWebView.tsx  CardWrapper.tsx  CourseCard.tsx  Empty.tsx  FileCard.tsx  Filter.tsx  FilterList.tsx  FlatList.tsx  HeaderTitle.tsx  IconButton.tsx  NoticeCard.tsx  SafeArea.tsx  ScrollView.tsx  Skeleton.tsx  Splash.tsx  SplitView.tsx  TableCell.tsx  TextButton.tsx  Toast.tsx  Touchable.tsx
src/constants/: Colors.ts  DeviceInfo.ts  Styles.ts
src/data/: mock.ts  root.ts  source.ts  store.ts
src/data/actions/: assignments.ts  auth.ts  courses.ts  files.ts  notices.ts  root.ts  semesters.ts  settings.ts  user.ts
src/data/reducers/: assignments.ts  auth.ts  courses.ts  files.ts  notices.ts  root.ts  semesters.ts  settings.ts  user.ts
src/data/selectors/: filteredData.ts
src/data/types/: actions.ts  constants.ts  state.ts
src/helpers/: env.ts  fingerprint.ts  fs.ts  html.ts  i18n.ts  parse.ts  retry.ts  secureStorage.ts
src/helpers/preval/: readFile.js  sso.js
src/hooks/: useDetailNavigator.ts  useFilteredData.ts  useNavigationAnimation.ts  useSearch.ts  useToast.ts
src/screens/: About.tsx  AssignmentDetail.tsx  AssignmentSubmission.tsx  Assignments.tsx  CourseDetail.tsx  Courses.tsx  FileDetail.tsx  FileSettings.tsx  Files.tsx  Help.tsx  Login.tsx  NoticeDetail.tsx  Notices.tsx  SSO.tsx  Search.tsx  SemesterSelection.tsx  Settings.tsx  types.ts
