project(rnapp)
cmake_minimum_required(VERSION 3.4.1)
set(CMAKE_SKIP_BUILD_RPATH TRUE)
set(OH_MODULE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../oh_modules")
set(NODE_MODULES "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../node_modules")
set(RNOH_APP_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(RNOH_CPP_DIR "${OH_MODULE_DIR}/@rnoh/react-native-openharmony/src/main/cpp")
set(RNOH_GENERATED_DIR "${CMAKE_CURRENT_SOURCE_DIR}/generated")
set(CMAKE_ASM_FLAGS "-Wno-error=unused-command-line-argument -Qunused-arguments")
set(CMAKE_CXX_FLAGS "-fstack-protector-strong -Wl,-z,relro,-z,now,-z,noexecstack -s -fPIE -pie")
add_compile_definitions(WITH_HITRACE_SYSTRACE)
set(LOG_VERBOSITY_LEVEL 1)
set(WITH_HITRACE_SYSTRACE 1) # for other CMakeLists.txt files to use

add_subdirectory("${RNOH_CPP_DIR}" ./rn)
add_subdirectory("${OH_MODULE_DIR}/@react-native-oh-tpl/react-native-safe-area-context/src/main/cpp" ./safe-area)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/async-storage/src/main/cpp" ./async-storage)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-webview/src/main/cpp" ./webview)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/cookies/src/main/cpp" ./rn_cookies)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-gesture-handler/src/main/cpp" ./gesture-handler)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-blob-util/src/main/cpp" ./blob-util)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-fs/src/main/cpp" ./fs)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-localize/src/main/cpp" ./rn_localize)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-pager-view/src/main/cpp" ./pager_view)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-pdf/src/main/cpp" ./pdfview)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-reanimated/src/main/cpp" ./reanimated)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-share/src/main/cpp" ./share)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-secure-key-store/src/main/cpp" ./secure_key_store)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-securerandom/src/main/cpp" ./secure_random)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-immersive/src/main/cpp" ./rnoh_immersive)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-file-viewer/src/main/cpp" ./file-viewer)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-document-picker/src/main/cpp" ./document_picker)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-image-picker/src/main/cpp" ./image_picker)
add_subdirectory("${OH_MODULE_DIR}/@react-native-ohos/react-native-device-info/src/main/cpp" ./device_info)


add_library(rnoh_app SHARED
    "./generated/LearnOHDataProcessor.cpp"
    "./PackageProvider.cpp"
    "${RNOH_CPP_DIR}/RNOHAppNapiBridge.cpp"
)

target_link_libraries(rnoh_app PUBLIC rnoh)
target_link_libraries(rnoh_app PUBLIC rnoh_safe_area)
target_link_libraries(rnoh_app PUBLIC rnoh_async_storage)
target_link_libraries(rnoh_app PUBLIC rnoh_webview)
target_link_libraries(rnoh_app PUBLIC rnoh_cookies)
target_link_libraries(rnoh_app PUBLIC rnoh_gesture_handler)
target_link_libraries(rnoh_app PUBLIC rnoh_blobutil)
target_link_libraries(rnoh_app PUBLIC rnoh_fs)
target_link_libraries(rnoh_app PUBLIC rnoh_localize)
target_link_libraries(rnoh_app PUBLIC rnoh_pager_view)
target_link_libraries(rnoh_app PUBLIC rnoh_pdf_view)
target_link_libraries(rnoh_app PUBLIC rnoh_reanimated)
target_link_libraries(rnoh_app PUBLIC rnoh_share)
target_link_libraries(rnoh_app PUBLIC rnoh_secure_key_store)
target_link_libraries(rnoh_app PUBLIC rnoh_secure_random)
target_link_libraries(rnoh_app PUBLIC rnoh_immersive)
target_link_libraries(rnoh_app PUBLIC rnoh_file_viewer)
target_link_libraries(rnoh_app PUBLIC rnoh_document_picker)
target_link_libraries(rnoh_app PUBLIC rnoh_image_picker)
target_link_libraries(rnoh_app PUBLIC device_info)